@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-08-18T00:35:16Z",
+  "timestamp" : "2022-08-18T08:07:52Z",
   "count_outdated" : 1734,
   "uniques_outdated" : 512,
-  "count" : 1751,
+  "count" : 1750,
   "uniques" : 522,
   "clones" : [
     {
       "timestamp": "2022-08-04T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
