@@ -1,3 +1,10 @@
+2022-08-18T08:07:52Z:
+* notice: last 14d: unq all: 5 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 512 1734 / 522 1751
+* notice: next accum: outdated-unq outdated-all / unq all: 512 1734 / 522 1750
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-08-04]
+
 2022-08-18T00:35:16Z:
 * notice: last 14d: unq all: 5 17
 * notice: prev accum: outdated-unq outdated-all / unq all: 511 1732 / 522 1750
